Split Foreign functions from Program monad module

--- a/vulkan-triangles.cabal
+++ b/vulkan-triangles.cabal
@@ -26,6 +26,7 @@ library
     exposed-modules:    Lib
                         Lib.GLFW
                         Lib.Program
+                        Lib.Program.Foreign
                         Lib.Vulkan.Device
                         Lib.Vulkan.Drawing
                         Lib.Vulkan.Instance
