--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,6 @@
-resolver: lts-8.21
+resolver: nightly-2018-04-09
 ghc-options:
-  vulkan-api:    -O2
+  vulkan-api:    -O2 -split-sections
   GLFW-b:        -O2
   bindings-GLFW: -O2
 
@@ -8,13 +8,11 @@ packages:
   - .
   - location: ../vulkan-api
     extra-dep: true
-#  - location: ../../GLFW-b
   - location:
       git: https://github.com/achirkin/GLFW-b
-      commit: 2c3f9b8d4f1d69960652b8925e5a297b58b20727
+      commit: 1c34109deeb5ed465df783830c2ecf54a8daa873
     extra-dep: true
-#  - location: ../../bindings-GLFW
   - location:
-      git: https://github.com/achirkin/bindings-GLFW.git
-      commit: acacc06532e23b396c4fa405548fc5ecab53e399
+      git: https://github.com/bsl/bindings-GLFW
+      commit: 0e0d7272ce9caeb4461acc607b6536e84d048a4a
     extra-dep: true
