Update stack configuration to make it buildable on windows

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
-resolver: nightly-2018-04-09
+resolver: nightly-2018-04-12
 
 ghc-options:
-  vulkan-api:    -O2 -split-sections
+  vulkan-api:    -O2
   GLFW-b:        -O2
   bindings-GLFW: -O2
 
@@ -19,5 +19,5 @@ packages:
     extra-dep: true
   - location:
       git: https://github.com/bsl/GLFW-b
-      commit: 071aae2bb5f998ab9414700dbeb6b50551228763
+      commit: 311a3a3b1ba0e4525ad1e1292ef1b363645cbafe
     extra-dep: true
