track deps from hackage rather than from local

--- a/stack.yaml
+++ b/stack.yaml
@@ -13,14 +13,11 @@ flags:
 extra-deps:
   - bindings-GLFW-3.2.1.1
   - GLFW-b-3.2.1.0
+  - dimensions-1.0.0.0
+  - easytensor-1.0.0.0
+  - easytensor-vulkan-1.0.0.0
 
 packages:
   - .
   - location: ../vulkan-api
-    extra-dep: true
-  - location: ../../easytensor/easytensor
-    extra-dep: true
-  - location: ../../easytensor/dimensions
-    extra-dep: true
-  - location: ../../easytensor/easytensor-vulkan
     extra-dep: true
