vulkan-triangles: Implemented first part of Uniform buffers from vulkan-tutorial.com

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 *.o
 *.hi
 *.summary
+cabal.project.local
 dist/
+dist-*/
+.ghc.environment.*
 .ghc-sandbox/
 .ghcjs-sandbox/
 *.tmp
@@ -10,3 +13,4 @@ dist/
 *.pdf
 *.prof
 *.aux
+.dir-locals.el
