--- a/vulkan-triangles.cabal
+++ b/vulkan-triangles.cabal
@@ -50,6 +50,7 @@ library
                       , easytensor >=1.0.1 && < 2
                       , easytensor-vulkan >=1.0.1 && < 2
                       , dimensions >=1.0.1 && < 2
+                      , time
     default-language:   Haskell2010
     if flag(dev)
         cpp-options: -DDEVELOPMENT
