triangles: main thread is now dedicated to glfw events only
The old glfwMainLoop was incompatible with -threaded because of the
threads of asyncRedo. The dedication has other benefits, now the window
contents are redrawn while resizing the window. And while loading
Chalet, the OS doesn't indicate anymore that the app isn't processing
its events.

--- a/vulkan-triangles.cabal
+++ b/vulkan-triangles.cabal
@@ -69,7 +69,7 @@ library
 executable vulkan-triangles
     hs-source-dirs:      app
     main-is:             Main.hs
-    ghc-options:         -Wall
+    ghc-options:         -threaded
     build-depends:       base
                        , vulkan-triangles
     default-language:    Haskell2010
