triangles: Simplified handling of old swapchain

--- a/vulkan-triangles.cabal
+++ b/vulkan-triangles.cabal
@@ -60,6 +60,7 @@ library
                       , JuicyPixels
                       , vector
                       , wavefront
+                      , concurrent-extra
     default-language:   Haskell2010
     if flag(dev)
         cpp-options: -DDEVELOPMENT
