--- a/vulkan-engine.cabal
+++ b/vulkan-engine.cabal
@@ -70,7 +70,7 @@ library
 executable vulkan-experiment
     hs-source-dirs:      app
     main-is:             Main.hs
-    ghc-options:         -threaded
+    ghc-options:         -threaded -with-rtsopts=-N
     build-depends:       base
                        , vulkan-engine
     default-language:    Haskell2010
