Automation infrastructure for queues, fences, semaphores and command pools and buffers
Added Lib.Vulkan.Engine:
- Currently just bundles all things needed to record and submit commands into
  `EngineCapability`.

Added Lib.Vulkan.Queue:
- any thread can submit work
- any thread can get notified when work is done
- stages work for batch submission
- optional pump for automatic batched submission
- completely manages fences internally
- releases semaphores automatically (back to MasterSemaphorePool)

Program.hs:
- Added loop, added return code to AbortLoop from LoopControl
- Added touchIORef for explicit barrier

Program.Foreign:
- Added listToDF, but turns out to be not needed now

Lib.hs:
- Now using ManagedQueue, CommandPoolPool, (Master-/)SemaphorePool and one
  CommandCapability that gets passed around
- load phase and swapchain recreation got rid of idle waits, this time it
  actually works
- manually collects all the semaphores from the load phase

Buffer:
- copyBuffer now just records to a command buffer

Command:
- changed createCommandPool to metaCommandPool, same for allocateCommandBuffers
- added ManagedCommandPool: one thread acquires, many release cmdBufs
- added CommandPoolPool: one per program. resets used command pools (cmdBufs get
  reset indirectly)
- added CommandCapability: one per thread that records cmdBufs. Talks to
  CommandPoolPool.
- added ManagedCommandBuffer: A cmdBuf that knows from which ManagedCommandPool
  it comes
- added forkWithCmdCap (since every thread that records command buffers should
  have a CommandCapability)
- added withCmdBuf, withCmdBufWait: Automatically release cmdBuf and other
  resources that were acquired in the argument action.

Drawing:
- Adapted for CommandCapability and ManagedQueue

Image, VertexBuffer:
- most funcs: reduced params with EngineCapability, returns semaphores
- copyBufferToImage now just records to a cmdBuf

Sync:
- added MasterSemaphorePool: collects used sems, one per program
- added SemaphorePoo

--- a/vulkan-engine.cabal
+++ b/vulkan-engine.cabal
@@ -32,8 +32,10 @@ library
                         Lib.Vulkan.Descriptor
                         Lib.Vulkan.Device
                         Lib.Vulkan.Drawing
+                        Lib.Vulkan.Engine
                         Lib.Vulkan.Image
                         Lib.Vulkan.Instance
+                        Lib.Vulkan.Queue
                         Lib.Vulkan.Pipeline
                         Lib.Vulkan.Presentation
                         Lib.Vulkan.Shader
@@ -42,11 +44,13 @@ library
                         Lib.Vulkan.TransformationObject
                         Lib.Vulkan.Vertex
                         Lib.Vulkan.VertexBuffer
-    build-depends:      base >= 4.9 && < 5
+    build-depends:      async
+                      , base >= 4.9 && < 5
                       , concurrent-extra
                       , containers
                       , directory
                       , dimensions >=1.0.1 && < 2
+                      , dlist
                       , easytensor >=1.0.1 && < 2
                       , easytensor-vulkan >=1.0.1 && < 2
                       , filepath
