--- a/vulkan-engine.cabal
+++ b/vulkan-engine.cabal
@@ -25,6 +25,10 @@ library
     exposed-modules:    Lib
                         Lib.GLFW
                         Lib.MetaResource
+                        Lib.MonadIO.Chan
+                        Lib.MonadIO.IORef
+                        Lib.MonadIO.MVar
+                        Lib.MonadIO.Thread
                         Lib.Program
                         Lib.Program.Foreign
                         Lib.Vulkan.Buffer
@@ -66,6 +70,7 @@ library
                       , vector
                       , vulkan-api >= 1.1.4.0
                       , wavefront
+                      -- , monadIO -- if needed, provides STM.MonadIO and StdInOut
     default-language:    Haskell2010
     default-extensions:  DataKinds
                        , LambdaCase
